# Copyright © 2024 The Johns Hopkins Applied Physics Laboratory LLC.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License, version
# 3, as published by the Free Software Foundation.  If you
# would like to purchase a commercial license for this software, please
# contact APL’s Tech Transfer at 240-592-0817 or
# techtransfer@jhuapl.edu.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public
# License along with this program.  If not, see
# <https://www.gnu.org/licenses/>.

[package]
name = "constellation-common"
description = "Common definitions and functionality for the Constellation distributed systems platform"
version = "0.0.0"
authors = [ "Eric McCorkle <eric.mccorkle@jhuapl.edu>" ]
edition = "2018"
rust-version = "1.81"
license = "AGPL-3.0-only"
keywords = ["distributed systems"]
categories = ["network-programming"]
exclude = [
    ".gitignore"
]

[features]
default = ["gssapi","log","openssl","unix"]
log = ["dep:log"]
gssapi = ["dep:libgssapi"]
openssl = ["dep:openssl"]
openssl-vendored = ["openssl/vendored"]
unix = []

[dependencies]
asn1rs = { version = "0.2" }
blake2 = { version = "0.10" }
digest = { version = "0.10" }
libgssapi = { version = "0.7", optional = true }
log = { version = "0.4", optional = true }
openssl = { version = "0.10", optional = true }
rand = { version = "0.8" }
ripemd = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
skein = { version = "0.1" }
time = { version = "0.3" }
whirlpool = { version = "0.10" }

[build-dependencies]
asn1rs = { version = "0.2" }

[dev-dependencies]
env_logger = { version = "0.10" }
serde_yaml = { version = "0.9" }
